# pagat-scraper

./: .gitignore  README.md  pyproject.toml
pagat_scraper/: analyze.py  gameweight.ipynb  gameweight_rating.py  scraper.py
