[tool.poetry]
name = "pagat-scraper"
version = "0.1.0"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
httpx = "^0.25.2"
lxml = "^4.9.3"
pandas = "^2.1.3"
tabulate = "^0.9.0"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
